@@ -521,5 +521,37 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
         <item>0</item>
         <item>1</item>
     </string-array>
+    <string-array name="errorRetryCount">
+        <item>Never</item>
+        <item>1 retry</item>
+        <item>2 retries</item>
+        <item>3 retries</item>
+        <item>4 retries</item>
+        <item>5 retries</item>
+    </string-array>
+    <string-array name="errorRetryCountValues">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+    <string-array name="errorRetryInterval">
+        <item>Immediately</item>
+        <item>1 second</item>
+        <item>5 seconds</item>
+        <item>15 seconds</item>
+        <item>30 seconds</item>
+        <item>1 minute</item>
+    </string-array>
+    <string-array name="errorRetryIntervalValues">
+        <item>0</item>
+        <item>1000</item>
+        <item>5000</item>
+        <item>15000</item>
+        <item>30000</item>
+        <item>60000</item>
+    </string-array>
 
 </resources>
