@@ -183,8 +183,7 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
                 </PreferenceScreen>
             </PreferenceCategory>
             <PreferenceCategory android:title="@string/prefExpansionCategory" >
-                <PreferenceScreen
-                    android:title="@string/prefExpDimmingTitle" >
+                <PreferenceScreen android:title="@string/prefExpDimmingTitle" >
                     <CheckBoxPreference
                         android:defaultValue="false"
                         android:key="@string/prefExpDimmingEnableKey"
@@ -237,8 +236,7 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
                     android:key="@string/prefExpAIEnableKey"
                     android:title="@string/prefExpAIEnableTitle" />
 
-                <PreferenceScreen
-                    android:title="@string/prefExpIOTitle" >
+                <PreferenceScreen android:title="@string/prefExpIOTitle" >
                     <CheckBoxPreference
                         android:defaultValue="false"
                         android:key="@string/prefExpIOEnableKey"
@@ -277,8 +275,7 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
                             android:title="@string/prefExpIO5LabelTitle" />
                     </PreferenceCategory>
                 </PreferenceScreen>
-                <PreferenceScreen
-                    android:title="@string/prefExpCustomTitle" >
+                <PreferenceScreen android:title="@string/prefExpCustomTitle" >
                     <CheckBoxPreference
                         android:defaultValue="false"
                         android:key="@string/prefExpCustomEnableKey"
@@ -685,6 +682,21 @@ http://creativecommons.org/licenses/by-nc-sa/3.0/
             android:showDefault="true"
             android:showSilent="true"
             android:title="@string/prefNotificationSoundTitle" />
+
+        <ListPreference
+            android:defaultValue="@string/prefNotificationErrorRetryDefault"
+            android:dependency="@string/prefNotificationEnableKey"
+            android:entries="@array/errorRetryCount"
+            android:entryValues="@array/errorRetryCountValues"
+            android:key="@string/prefNotificationErrorRetryKey"
+            android:title="@string/prefNotificationErrorRetryTitle" />
+        <ListPreference
+            android:defaultValue="@string/prefNotificationErrorRetryIntervalDefault"
+            android:dependency="@string/prefNotificationEnableKey"
+            android:entries="@array/errorRetryInterval"
+            android:entryValues="@array/errorRetryIntervalValues"
+            android:key="@string/prefNotificationErrorRetryIntervalKey"
+            android:title="@string/prefNotificationErrorRetryIntervalTitle" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/prefLoggingCategory" >
         <CheckBoxPreference
