@@ -15,6 +15,8 @@ public final class Globals {
 	public static final int logReplace = 0;
 	public static final int logAppend = 1;
 
+	public static final int errorRetryNone = 0;
+	
 	public static final int memoryReadOnly = -1;
 	public static final int defaultPort = 9;
 
