@@ -145,3 +145,6 @@ Changelog of all the versions of AndroidStatus
  * updated the settings page to make it simpler and fewer screens
  * updated for ics and jellybean
  * updated to new logo
+ * error retry count to retry connection before displaying error
+ ** disabled by default
+ ** 5 second interval between retries
