@@ -2,6 +2,9 @@
  * updated the settings page to make it simpler and fewer screens
  * updated for ics and jellybean
  * updated to new logo
+ * error retry count to retry connection before displaying error
+ ** disabled by default
+ ** 5 second interval between retries
 
 0.8.0
  * created ContentProvider for external apps to access the stored parameters
